<resources>
    <string name="app_name">Budsjett</string>
    <string name="title">Studentbudsjett</string>
    <string name="titlev2">Applikasjon</string>

    <string name="tilbake">Tilbake</string>
    <string name="epost">Epost:</string>
    <string name="epost2">epost</string>
    <string name="epostORusername">epost eller brukernavn</string>
    <string name="pass">Passord:</string>
    <string name="pass2">passord</string>

    <string name="logg_på">Logg på</string>
    <string name="opprett_ny_bruker">Opprett ny bruker</string>
    <string name="opprett_bruker">Opprett bruker</string>

    <string name="fornavn">Fornavn:</string>
    <string name="fornavn2">fornavn</string>

    <string name="etternavn">Etternavn:</string>
    <string name="etternavn2">etternavn</string>

    <string name="adresse">Adresse: </string>
    <string name="adresse2">adresse</string>

    <string name="sted">Sted:</string>
    <string name="sted2">sted</string>

    <string name="brukernavn">Brukernavn:</string>
    <string name="brukernavn2">brukernavn</string>

    <string name="success">Vellykket!</string>
    <string name="fail">Feil oppstod!</string>

    <string name="ny_handel">Ny handel</string>
    <string name="vareDBBtn">Varedatabase</string>
    <string name="logutBtn">Logg ut</string>
    <string name="info">Om det er første gangen du bruker appliaksjonen her så må du legge til varer i databasen først</string>

    <string name="dinePenger">Dine penger: </string>
    <string name="harIgjenKr">Du har igjen: </string>
    <string name="legg_til">Legg til vare</string>
    <string name="fjern">Fjern</string>
    <string name="kroner">kr</string>
    <string name="navn_vare">Navn på varen:</string>
    <string name="navn">Navn</string>
    <string name="prisView">Pris</string>
    <string name="butikkView">Butikk</string>
    <string name="navn_vare_edit">Varenavn</string>
    <string name="pris">Pris:</string>
    <string name="pris_vare">Prisen på varen</string>
    <string name="butikk">Butikk:</string>
    <string name="butikk_navn">Navnet på butikken</string>
    <string name="velg_vare">Velg vare fra listen</string>
    <string name="lagt_til_varer">Du har lagt til følgende varer</string>
    <string name="scroll">Bla opp eller ned</string>

    <string name="toast_feil_register">Feil på registring!</string>
    <string name="toast_vare_lagt_til">Varen ble lagt til!</string>
    <string name="toast_tomt_felt">Fyll ut feltene!</string>
    <string name="toast_feil">Noe gikk galt! Prøv igjen</string>
    <string name="toast_login_vellykket">Logg inn vellykket!</string>
    <string name="toast_login_feil">Brukernavn/Epost eller passord er feil</string>


    <string-array name="butikker">
        <item>Coop Obs</item>
        <item>Coop Prix</item>
        <item>Coop Mega</item>
        <item>Coop Marked</item>
        <item>Coop Extra</item>
        <item>Kiwi</item>
        <item>Spar</item>
        <item>Eurospar</item>
        <item>Bunnpris</item>
        <item>Rema 1000</item>
        <item>Joker</item>
        <item>Matkroken</item>
        <item>Europris</item>
        <item>Meny</item>
    </string-array>

</resources>