<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/infoTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/red"
        android:textStyle="italic"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/infoTxt"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/nyhandelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="@string/ny_handel" />

        <Button
            android:id="@+id/vareDBBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/vareDBBtn" />

        <Button
            android:id="@+id/logutBtn"
            android:layout_width="wrap_content"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/red"
            android:textStyle="italic"
            android:text="@string/logutBtn" />

    </LinearLayout>


</RelativeLayout>