<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vareDBtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/vareDBBtn"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/ScrollViewLayout"
        android:layout_width="match_parent"
        android:layout_height="500px"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nameItemTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight=".60"
                    android:text="@string/navn_vare"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameItemEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vareDBtxt"
                    android:layout_marginEnd="20dp"
                    android:layout_weight=".40"
                    android:hint="@string/navn_vare_edit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secoundNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vareDBtxt"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priceItemTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight=".60"
                    android:text="@string/pris"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/priceItemEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginStart="20dp"
                    android:layout_weight=".40"
                    android:hint="@string/pris_vare"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kroner"
                    android:textSize="16sp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/thirdNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vareDBtxt"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/storeTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight=".60"
                    android:text="@string/butikk"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <AutoCompleteTextView
                    android:id="@+id/storeEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight=".40"
                    android:hint="@string/butikk_navn"
                    android:inputType="textAutoComplete" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ScrollViewLayout"
        android:background="@drawable/frame_btn_green"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/legg_til"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addBtn"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/goBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/frame_btn_small"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/tilbake"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>