<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/firstNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harIgjenKr"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/amountLeftTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="xxxx"
            android:padding="5dp"
            android:background="@drawable/frame"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/kroner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginStart="10dp"
            android:text="@string/kroner"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secoundNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/firstNameLayout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/removeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight=".5"
            android:textStyle="bold"
            android:background="@color/red"
            android:text="@string/fjern"/>

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:background="@color/green"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/legg_til" />

    </LinearLayout>

    <TextView
        android:id="@+id/listedItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secoundNameLayout"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="16dp"
        android:text="Du har lagt til følgende varer"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listedItems"
        android:textColor="@color/black"
        android:gravity="left"
        android:textStyle="italic"
        android:textSize="16dp"
        android:text="Navn"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listedItems"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="16dp"
        android:text="Pris"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listedItems"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:gravity="right"
        android:textSize="16dp"
        android:text="Butikk"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="550px"
        android:layout_marginBottom="200px">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/productList"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/goBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@color/red"
        android:text="@string/tilbake"/>


</RelativeLayout>